--- a/community_governance.adoc
+++ b/community_governance.adoc
@@ -360,103 +360,236 @@ Your legal department should assist with reviewing and signing this paperwork.
 So far, we've discussed the nature and importance of open source project and community governance, factors that trigger evolutions in project governance models, and a few of the most popular open source governance models.
 Finally, let's examine some concrete steps you can take to structure your own community's governance—whether you're launching a new project or evolving one that's already active.
 
-Because community governance involves both *roles* and *policies and procedures*, we'll discuss _conducting_ project governance along both these dimensions.
-Note that the requirements we've outlined here are actually quite spartan.
-Remember: A project's governance model evolves as the project grows.
-What follows, then, constitutes a kind of "minimum viable product" for project governance.
+Recall that most governance models consist of two primary dimensions: roles, and policies and procedures.
+The basic requirements here are actually quite spartan, and can be evolved as the project grows.
+What follows constitutes a kind of "minimum viable product" for project governance.
+
+In your project, each of the following sections could very well be its own document. Or  they might simply be part of a single long README—or anything in between.
+What's important it to get the basics of how things work down in text, so that people thinking about participating in your project know where to go, who to talk to, and most of all aren't horribly surprised.
 
 === The importance of honesty
 
-When writing governance documentation, you may feel tempted to define your project as you would _like it to be_ (or how your corporate marketing department would like it to be seen!), rather than _how it actually is_.
-Particularly, when writing initial governance documentation, project leaders often mistakenly attempt to make a project appear more democratic than it actually is in practice.
-But this can raise issues when users or contributors sense that a project isn't meeting their expectations by living up to its governance documentation.
-People who would have otherwise accepted that a certain project was single-company at the outset, for example, could now become very upset if they ask for committer status have it refused.
+When writing governance documentation, it can be tempting to define your project as you would like it to be—or how your corporate marketing department would like it to be seen— rather than how it actually is.
+Particularly, project leaders frequently make the mistake of attempting to make the project appear more democratic than it actually is, in documentation.
+This falls apart when users or contributors expect your project to live up to its governance documentation, and it doesn't.
+People who would have been fine with being told a project was single-company at the outset become very upset if they ask for their committer status and are refused later.
 
-Like technical documentation, governance documentation should explain how a project _actually works_.
-Document aspirational goals on their own, perhaps in a project roadmap or ``TODO`` file.
+Like technical documentation, governance documentation should explain how things actually work.
+If there are aspirational goals, those go in their own section under "Roadmap" or "TODO."
 
-== Defining roles
+=== Defining roles
 
-As mentioned, your project will feature a variety of roles, but you'll only need to define a handful of them when starting out.
-Those basic roles are:
+As mentioned, your project will have a variety of real roles, but you only need to define a handful of them to start out.  Those basic Roles are:
 
-1. Member
-2. Contributor
-3. Leader
+. Member
+. Contributor
+. Leader
 
-People are already performing all these roles in your project—whether you've thought about it or not.
-Record each role and its associated responsibilities in writing, either in your project's documentation or your main source code repository.
-This allows you to make _explicit_ what was formally _implicit_, both setting expectations and allowing more people to participate in your project.
-For each role, define: 
+Whether or not you've thought about it, your project already features all these roles you already have in your project.
+Each one of them should be recorded in a roles document of some kind, either in your project's documentation or your main source code repository.
+This allows you to make what was implicit, explicit, both setting expectations, and allowing more people to participate in your project.
+For each role, you'll need to define who they are, how they qualify for that role, what they are expected to do, and what their rights and privileges are.
+Eventually you'll go beyond these roles and define many more specific ones.
+But detailing these three will take your project a fair ways.
 
-- who plays that role
-- how someone qualifies to play that role
-- what that person ifs expected to do in that role 
-- what their rights and privileges are when occupying that role
+==== Members
 
-Eventually you'll outgrow these roles and define many more specific ones.
-But detailing these three is an excellent start for your project.
-
-=== Members
-
-This is possibly the least-documented role across all open source communities, despite being the most common.
+This is possibly the least-documented role across all of open source, despite being the most pervasive.
 Members are the people or organizations who participate in your project and are recognized for it.
 Depending on how your project is run, these can be subscribers on a mailing list, sponsoring companies, known end-users, participants at an event, or members of a foundation.
-In some projects, members are synonymous with contributors, but in most they are not.
+In some projects, "member" is synonymous with "contributor," but in most this is not the case.
 Most projects have a much larger cadre of people who are "involved" with the project in some way but are not actively contributing to it.
 
-Defining who members are requires deciding who the project is actually serving, which is always a critical discussion for any community to have.
-Are customers of the primary sponsoring company automatically project members?
-Can companies be members, or only individuals?
-Are end-users members, or just contributors?
-More than anything, defining a "members" role means defining who project leades must listen to.
+Defining who members are requires deciding who the project is actually serving, which is always a critical discussion to have.
+Are customers of the main sponsoring company automatically project members?  Can companies be members, or only individuals?
+Are end-users members or just contributors?
+More than anything, defining Members means defining who it is that project leades need to listen to.
 
-Almost all projects need to specify the rules to which all members are subject—usually a code of conduct and not much else (see below)—and what they can expect from leaders and contributors.
+For almost all projects, you need to specify what rules members are subject to (usually a code of conduct and not much else) and what they can expect from leaders and contributors.
 It's particularly helpful to explain how members should participate in the project, such as "members file bugs against this repository, and use the 'new bug' template."
 Most people, given clear instructions, are happy to channel their participation into the routes you show them.
 
-In projects with democratically elected leadership, "member" can be a much more rigorously defined role, as being a member can grant a person voting rights.
-This will require you to more carefully qualify members in order to avoid vote-packing or simply derailing election procedures (see below).
+In projects with democratically elected leadership, members can be a much more rigorously defined role, because being a member can come with voting rights.
+This requires you to more carefully qualify members to avoid vote-packing or simply derailing election procedures.
 
-=== Contributors
+==== Contributors
 
-Far more projects have a written definition the "contributor" role—but fewer than you'd think.
-In the age of publicly hosted source code control, people often assume they can simply "count up" contributors in the Github or Gitlab statistics and call that number a measure of their "contributors."
+Far more projects have a written definition of Contributors, but fewer than you'd think.
+It's often assumed, in the age of publicly hosted source code control, that you simply count up anyone who shows up in the Github or Gitlab statistics is therefore a Contributor.
+But defining "who is a Contributor to this project" can be deceptively hard.
 
-But defining _who_ is a contributor to your project can be deceptively difficult.
 Is it anyone who posted on a mailing list, or do you need 100 merged pull requests?
-Does contributing more than code make someone a contributor?
-What about folks who plan events and engage in advocacy?
+Is it just code contributors, or contributors of any kind? What about folks who do events and advocacy?
 Are staff who work for a contributing company automatically considered contributors, or do they have to earn it individually?
-What about someone who contributed a lot of code three years ago, but hasn't been active in the project since?
+What about someone who contributed a lot of code three years ago, but not since then?
+Who gets listed in your release credits and how?
 
-Conversation about defining this role will often have a greater effect on your project than the resulting document does.
+The conversation around this will often have a greater effect on your project than the document does.
 
-The "contributor" role is typically one that involves increased expectations for benefits a person will receive in return for their work in the project.
-This not only includes an explanation of the intellectual property rules of the project (e.g., does a contributor still own their code, or not?), but also questions like how soon a contributor can expect their submissions to be reviewed and accepted or rejected.
-Generally, you should also explain how a contributor will be credited for their participation.
+The "controubutor" role is also one for which you'll need to set many more expectations for what contributors receive in return for their work.
+This not only includes an explanation of the intellectual property rules of the project (e.g. does the contributor still own their code, or not), but also questions like how soon a contributor can expect their submissions to be reviewed and accepted or rejected.
+Generally, you should also explain how the contributor will be credited for their participation.
 
-WHen defining this role, you'll need to set clear rules contributors need to follow.
-For example, many projects require contributors or their employers to sign paperwork officially sharing their copyright or other intellectual property.
-Your project may also require contributors to do perform certain project maintenance functions, such as review others' submissions or assist with documentation.
+It's also a place where you set out clearly what rules contributors need to follow.
+For example, many projects require contributors or their employers to sign paperwork officially sharing their copyright or other intellectual property (see below for more on this).
+You may also require contributors to do certain things to help maintain the project, such as review others' submissions or help with documentation.
 
-=== Leaders
+==== Leaders
 
-{coming soon!]
+As we noted, every project has leadership, even those leaders are not clearly identified.
+As such, at a minimum you'll need to identify who your leaders are, so that decision-making processes can be clear.
+Many projects also explain the qualifications and procedure to become a leader, whether it's selection by a committee, election, or simply based on your job. If you have a more politically sophisticated project, then those should be written down in a selection/election procedure document as well (see below), but if it's simple, selection can just be part of the role document.
 
-== Policies and procedures
+What fewer projects put into their leadership role documents is the other parts: the powers and limitations of the leaders, their duties, and how people leave the role (voluntary or not).
+It's very important that everyone know exactly how far a leader's authority extends, as well as what they're responsible for, or you end up with a lot of conflict between leaders and other project members.
+Having a set of written duties helps immensely when your leadership team has to decide to kick out a project leader who has stopped participating, but does not want to resign.
 
-=== Developing a code of conduct
+If your project is trying to recruit new/additional leaders, then it's also important to have a detailed set of qualifications a leader needs to meet.
+Contrary to some expectations, having detailed qualifications gives people who want to move up in the project a target to shoot for.
 
-Creating a code of conduct for your open source community is one of the simplest and most powerful ways to begin influencing the project's governance model.
-A code of conduct is a description of expectations for community members' behavior when they act _within_ or _on behalf of_ the
-project.
+Setting policies and procedures
 
-A code of conduct might outline the values a community agrees to uphold, articulate the behaviors community members expect one another to exhibit in the service of those values, and identify the consequences of violating the code.
-The most effective codes of conduct are those written through _collaborative_ processes that involve participants across the community (not just project leadership!).
+In addition to some basic role documentation, there's a certain amount of basic paperwork that each project should create for itself.
+These "policy and procedure" (P&P) documents are considered a kind of minimum for what you need to grow and mature a project.
+Your project may, and eventually will, have others as your contributor base expands and the number of processes you need to write down with it.
+
+Some of these will be mostly technical (like release process, or a support policy), and we won't be exploring those here.
+
+However, there are three governance P&P that every project should have:
+
+. Code of conduct
+. Contribution process & paperwork
+. Communication information
+
+Projects that grow larger and more popular, become commercially adopted, or are actively recruiting many new contributors probably want some additional P&P docs, such as:
+
+. Leadership selection/election process
+. Contributor promotion
+. Release process
+. Security issue reporting & handling
+. Project trademark usage
+
+We'll talk about these six documents below.
+
+==== Developing a code of conduct
+
+Creating a code of conduct (CoC) for your open source community is one of the simplest and most powerful ways to begin influencing the project's governance model.
+A code of conduct is a description of expectations for community members' behavior when they act within or on behalf of the project.
+It might outline the values a community agrees to uphold, articulate the behaviors community members expect one another to exhibit in the service of those values, and identify the consequences of violating the code.
+The most effective codes of conduct are those written through collaborative processes that involve participants across the community (not just project leadership!).
 In this way, constructing a code of conduct can become a compelling community-building exercise.
 
-To get started, view an example code of conduct from the https://www.contributor-covenant.org/[_Contributor Covenant_].
+Here are the core items that every Code of Conduct needs to have:
+
+. A statement of what kind of behavior is encouraged
+. A statement of what kinds of behavior are prohibited
+. Contact information for reporting violations
+. A description of the enforcement mechanism
+
+When you're starting out, both the report recipients and the enforcers of the CoC are likely to be your project founders.
+As your project grows, you'll want to form a specific CoC committee, but you don't need that right away.
+
+=== Contribution process
+
+In order to recruit contributors, you need to tell them the basics of how to contribute to your project.
+For projects on Github or Gitlab this is generally placed in a document called CONTRIBUTING.md, but it can really go anywhere as long as it's linked from your project's home page.
+If you've documented your "contributor" role, you can just use that for your contribution docs.
+If you haven't, then here's a few things you should cover in your contribution document:
+
+. Where to communicate with other contributors
+. How to submit your first code, documentation, or other contribution
+. Any testing or formatting requirements, in detail
+. What to expect from the review process
+. When they qualify for membership/contributor status
+
+Some projects have paperwork that needs to be submitted before any contributions can be accepted, such as a Developer Certificate or Origin (DCO) or Contributor License Agreement (CLA), certificate of identity, or GPG keyring.
+Spell these out with step-by-step instructions in your contribution document.
+
+==== Communications
+Most open source projects have multiple ways that project members talk to each other, including email, chat, issues, code reviews, video conferencing, and even in-person meetings.
+You need to spell out which channels your project uses, and how to join them.
+It's also important to keep this information up to date.
+
+If you have them, it's useful to list both your user forums as well as the channels used for contributors, so that people know where to take their questions.
+Distinguish the media used for official project business as opposed to unofficial channels used for general discussion.
+It's extremely frustrating for contributors to be told "oh, we decided that on the mailing list" if they didn't even know there was a mailing list.
+Any regular meetings should link to a calendar, or at least information about the next meeting.
+And if your community has any important events, such as annual developer conference, mention it.
+
+See this guidebook's chapter on communication norms in open source projects for more detail.
+
+==== Leadership selection/election
+
+If you've already documented your "leadership" role, the information on how project members become leaders will be part of it.
+However, some projects don't get around to writing roles, and other projects have multi-step election procedures that require additional documentation.
+Some just want a quick-reference of how the election or selection process works.
+
+If you have the typical new small project, this document will be very short indeed, containing simply the list of project leaders, who are also the project founders.
+If your project has a self-appointing council, it's not that much more complicated; just write down how the selection works.
+
+Projects that have full-blown elections will need a longer document containing all of the provisions of elections, including who gets to vote, how the vote is conducted and by whom, what the schedule is, and how candidates are selected.
+We'll offer additional advice on holding elections at the conclusion of this chapter.
+
+==== Contributor promotion
+If your project has multiple levels of contributor status, with a defined progression between them—what's known as a "contributor ladder"—then it can be useful to write a specific document explaining how this works.
+This will give new contributors an idea of what's ahead of them and what they need to do to move up.
+It also helps make sure that contributor promotion is being done fairly.
+
+For fairness, it's preferable to make the promotion rules as objective as possible.
+For example, "Has consistently helped with code reviews in the subproject" is good, but "Has completed at least 40 code reviews over the last 3 months in the subproject" is better.
+Quantifiable rules help you avoid overlooking contributors who are valuable, but not outspoken.
+
+Smaller projects, with only a couple of contributor levels (e.g. "contributor" and "owner"), do not need a separate document for this.
+
+==== Release process
+
+Releasing software involves making decisions around what will and won't be included in the current release.
+When a project is small, this is pretty obvious, but in larger projects with contributors working for multiple employers, deciding what stays and what gets cut can be political.
+Decisions about which platforms are supported can also be contentious.
+As such, when your project grows you're going to want to write down some process around releases.
+
+Some projects have defined release teams, in which case this document will be largely a collection of Role documents for the release team.
+In other projects, the maintainers do the releases, but even with those it's worthwhile to explain how they decide what gets included.
+This doesn't mean necessarily changing how you do releases, but rather just writing down what the real procedure already is, particularly the method of deciding which features and patches get left out.
+The process for writing and editing the announcement is also worthwhile, especially if your project involves multiple vendors.
+
+This document will also have lots of non-governance content, like the locations of the servers, the commands to build packages, and how long to wait for mirrors to sync.
+It's expected that most of it will be technical instructions.
+Just don't neglect the who and why along with the how.
+
+==== Security issue reporting & handling
+Once your project's code is being used in production by external users, managing security issue reports becomes a critical priority.
+While this topic could use an entire chapter on its own, there is some basic governance setup associated with handling security issues.
+This will include:
+. Who is selected to be on the security team, how, and when.
+. Where security reports get sent
+. How they are handled, including confidentiality requirements
+. What reciprocation security researchers can expect
+. How long you can wait before disclosing
+
+Confidentiality requirements are particularly important for both the security team itself, and for the programmers and security researchers you work with.
+For example, security researchers are willing to not disclose their findings to the public until your project does, but only if they are promised that your security team won't do that either.
+In many projects, security team members aren't allowed to share certain information even with their own employers.
+
+==== Project trademark usage
+
+When a project gets popular, both commercial and non-commercial groups want to use the project's name, word mark, and graphical logo in things.
+Whether it's just statements of support, a third party wanting to sell shirts with your project on them, or other projects that derive from yours, projects need these entities to be following some kind of official policy around usage.
+Even if the project has not filed for a trademark with any government yet, establishing a pattern of policy and permission will help protect your project's name in the future.
+
+Such a policy consists of four things:
+
+. A general statement of acceptable usage
+. Contact information to request specific permission or for clarification
+. A designated team, committee, or contributor who is going to handle these requests
+. Additional guidelines for the trademark team
+
+For the actual acceptable usage statement and guidelines, projects should obtain legal assistance.
+The governance part of this is selecting the "trademark team" (which could be an existing steering council, or similar), and how guidelines are updated and changed.
+In projects run by multiple technology vendors, it's critical to work this out in the early stages of the project, because the project's own sponsors will want to use it's mark almost immediately.
+Make sure that responsibility here is shared between the stakeholders in your project.
+
+Like security issues, the trademark team needs to be able to handle confidential contacts, because sometimes pre-release startups may want to use your project name.
 
 === Holding community elections
 
