Edit section on emotional contagion

--- a/community-manager-self-care.adoc
+++ b/community-manager-self-care.adoc
@@ -47,40 +47,40 @@ So by practicing self-care, we can build a resilience to life's unavoidable stre
 This concept of self-care may appear simplistic in theory, but it is so commonly overlooked or neglected—especially by community managers.
 Let's explore (and deconstruct) some reasons why.
 
-=== Leaders around the clock
+=== Emotional contagion
 
 Community managers are often seen as leaders, the people everyone can turn to, an inspiration for others to emulate.
-This seemingly high pedestal can be daunting, demanding a good deal of emotional intelligence and mental effort to deliver not only a growing, but productive, community.footnote:[The Community Roundtable, https://communityroundtable.com/state-of-community-management/burn-out-risk-is-high-for-online-community-managers/[2019 State of Community Management Survey]]
+This seemingly high pedestal can be daunting, demanding a good deal of emotional intelligence and mental effort to deliver a community that's not only growing but also productive.footnote:[The Community Roundtable, https://communityroundtable.com/state-of-community-management/burn-out-risk-is-high-for-online-community-managers/[2019 State of Community Management Survey]]
 
-When the going gets tough it's often our responsibility, and desire, to pull the community through those times.
-But in order to do this we need ourselves to be in top condition to face whatever is thrown at us, which evidentially there always is when interacting with diverse personalities, resolving conflicts, making tough decisions, and all the while working towards future long term objectives.
+When the going gets tough, it's often our responsibility (and our desire) to pull the community through those times.
+But in order to do this, we need to be in top condition _ ourselves_.
+That is, we first need to look after ourselves before we can look after others in any sustainable way.
+Otherwise, we'll never be able to adequately face whatever is thrown at us (and, when interacting with diverse personalities, resolving conflicts, making tough decisions, and all the while working towards future long term objectives, something always is).
+And that is why self-care is so important.
 
-Leaders need to be in a happy place to be effective and that is why self-care is so important.
-We first need to look after ourselves to sustainably look after others.
-
-One of the first tasks is to be aware of how our overall health and emotional state can impact our community.
+One of the first tasks on the road to self-care, then, is to be aware of how our own emotional states can impact our communities.
 
 Emotions (both positive and negative) are highly contagious.footnote:[Sherrie Bourg Carter Psy.D, https://www.psychologytoday.com/us/blog/high-octane-women/201210/emotions-are-contagious-choose-your-company-wisely[Emotions Are Contagious - Choose Your Company Wisely]]
-Our emotional expressions have the power to unconsciously influence people around us with them often automatically mimicking our own.footnote:[Principles of Social Psychology, https://opentextbc.ca/socialpsychology/chapter/the-role-of-affect-moods-and-emotions/[The Role of Affect: Moods and Emotions ]] 
-If we are in a state of anxiety or stress others will sense this and add to it their own negative energy.
+Our emotional expressions have the power to unconsciously influence people around us, such that others may even begin unconsciously mimicking our own.footnote:[Principles of Social Psychology, https://opentextbc.ca/socialpsychology/chapter/the-role-of-affect-moods-and-emotions/[The Role of Affect: Moods and Emotions ]]
+If we are in a state of anxiety or stress, others will sense this and add to it their own negative energy.
 We see this when dealing with particularly toxic community members infecting others, but fail to identify that we ourselves can unconsciously unduly influence others as well.
-Similarly if we are in a genuine pleasant mood people tend to be driven by that positive mood and become more productive.
+Similarly, if we are in a genuine pleasant mood, then people tend to be driven by that positive mood and become more productive.
 
-In order to bring out the best in others we must bring our best to the table.
+In short: In order to bring out the best in others we must bring our best to the table.
 
-As leaders we have the ability to wield immense power to make positive changes in our community along with the support of our followers.
+As leaders, we wield potentially immense power to make positive changes in our communities.
 Let's use this power.
-Take the opportunity to utilize your influence to encourage and promote self-care for the benefit of not only your community members but also for yourself.
+Take every opportunity to utilize your influence for encouraging and promoting self-care—not only for the community's benefit, but also for yourself.
+Educate yourself on what self-care looks like to you, and communicate that understanding with your team.
+Community managers don't need to share their most intimate fears or anxieties.
+Yet simply initiating a conversation on the importance of self-care can be beneficial, not just for the team _running_ the community, but for the _entire_ community.
 
-Educate yourself on what self-care looks like to you and communicate that with your team.
-We don't need to share our intimate fears or anxieties, but it is important to start the conversation on how self-care can be beneficial not only to the team running the community, but for the overall healthy of the community.
-
-Recognize and implement regular dedicated time in your and the team's workload to practice self-care.
+Identify and implement regular, dedicated time in your and the team's workload to practice self-care.
 Set realistic expectations on deliverables and communicate frequently within the team potential triggers of stress or strain that may require more downtime to focus on one's physical and mental health.
 
-By taking steps towards actively promoting and advocating for self-care you not only prompt members to follow suit led by example, but it also helps remove the stigma of leaders being invulnerable by revealing a more human side to you.
+By taking steps towards actively promoting and advocating for self-care, you prompt members following your lead to do the same. You also begin revealing your human side, eroding the unhealthy addumption that leaders are invulnerable to emotional dimensions of the work.
 
-=== Being Human
+=== Being human
 
 We can often find ourselves being controlled by our own, or by other's, generalization of what a community manager should be: driven, friendly, successful, super human, or perfect even.
 
